--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,8 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'androidx.appcompat:appcompat:1.0.0'
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.google.zxing:core:3.2.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.google.zxing:core:3.2.1'
 }
